--- a/weather/style.css
+++ b/weather/style.css
@@ -17,7 +17,7 @@ h1, h3 {
     margin: 0;
     font-family: 'Heebo', sans-serif;
     font-family: 'Lora', serif;
-    font-family: 'Rubik', sans-serif;
+    ont-family: 'Rubik', sans-serif;
     background: #111;
     background-position: center;
     background-repeat: no-repeat;
